force-app/main/default/objects/Book__c/fields/Book_cover__c.field-meta.xml
<CustomField>
    <fullName>Book_cover__c</fullName>
    <label>Book cover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardcover</fullName>
            </value>
            <value>
                <fullName>Paperback</fullName>
            </value>
            <value>
                <fullName>Special Editions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>